--- a/greating-services/src/main/resources/application.properties
+++ b/greating-services/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8080
 spring.application.name=greating-services
+
+spring.profiles.active=it
+
+greating-services.greating=Fala
+greating-services.default-name=Mundo
